# iarc007_hitcsc

./: LICENSE  README.md
guidance/: CMakeLists.txt  CMakeLists.txt~  package.xml
guidance/include/: functions.h~  pub.h~
guidance/src/: GuidanceNode.cpp  GuidanceNode.cpp~  GuidanceNodeTest.cpp~  GuidanceNodeTest.h~  Readme.txt~  Rotationr0.xml~  back_body_R_chess.xml~  guidance_pub.cpp  guidance_pub.cpp~  left_body_R_chess.xml~  under_body_R_chess.xml~
iarc/: CMakeLists.txt  README.md  package.xml
iarc/cfg/: init_ori.cfg  pid_relative_y.txt  pidconfig.txt  pidpitch.txt  pidroll.txt  pidy.txt  pidyaw.txt  pidz.txt  simu.cfg
iarc/doc/Sona/: sona.cpp
iarc/doc/navigation/: Distortion.xml  Intrinsics(1).xml  Intrinsics.xml  NewIntrinsics.xml  R  R_chess_b.xml  Rotation.xml  ost.txt
iarc/include/iarc/navigation/: common.h  find_boundary.h  line_classified.h  line_inside.h  math.h  test.h  threshold_image.h
iarc/include/iarc/pilot/: XU_ESO.h  XU_LADRC.h  control.h  leo_math.h  parameter.h  pid_controller.h  rrt.h  rrt.h.oo  subscribe.h  target_processor.h
iarc/launch/: MAV.launch  border.launch  gra.launch  lidar_rec.launch
iarc/log/: mjh.txt~  vision_pos.txt~
iarc/msg/: location.msg  model_choose.msg  msg指导.md  object.msg  obstacle.msg  path.msg  position.msg  sona.msg  target.msg  target_full.msg
iarc/src/detection/: checkpoint  main.py  main_0.py  tf_class.py  tf_utils.py  tf_utils_0.py  train.py
iarc/src/detection/model/: model.ckpt.data-00000-of-00001  model.ckpt.index
iarc/src/navigation/: bag2image.cpp  cam_get.cpp  common.cpp  external_parameter.cpp  find_boundary.cpp  line_classified.cpp  line_inside.cpp  math.cpp  new_intrinsic.cpp  position(bag).cpp~  position.cpp  position.cpp~  raw_position.cpp  sona.cpp  test.cpp  threshold_image.cpp  wide_angle_pub.cpp  内外参标定
iarc/src/pilot/: (2017.11.25model)control .cpp  3.巡航&避障v1.2.txt  5.巡航&避障v2.1.txt  6.交互&避障v1.0.txt  XU_ESO.cpp  XU_LADRC.cpp  control (另一个复件).cpp  control (复件).cpp  control.cpp  control_jrh.cpp  leo_math.cpp  main.cpp  parameter.cpp  pid_controller.cpp  rrt.1.cpp.oo  rrt.cpp  simulation.cpp  sona.cpp  subscribe.cpp  target_processor.cpp  top.cpp  track_test.1.py  track_test.py
iarc/src/pilot/scripts/: kf.py  lidar.py  report.py  top.cpp  top.py  tst.py
iarc/src/pilot/备份/: 50Hzcontrol.cpp
iarc007/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  CMakeLists_Rules_Intro.md  iarc.sh  iarc.sh~  iarc007包程序组织介绍.txt  package.xml  rosrun_iarc007  rosrun_iarc007.bash~  rosrun_iarc007.sh~  rosrun_iarc007~  run_iarc007
iarc007/cfg/: dynamic.cpp  iarc007.cfg~
iarc007/doc/: Distortion.xml  Intrinsics.xml  R_chess_b.xml  R_cz_b  Rotation.xml  Translation.xml  attitude_txt.txt  cam_rotation_all.xml  cam_translation_vector_all.xml  camera_left.yaml  camera_mono.yaml  dis_coeff_front1103.txt  dis_coeff_front5_16.txt  intrinsics_front1103.txt  intrinsics_front5_16.txt  map.txt  ost.yaml  rotation_vector
iarc007/doc/SVMXML/SVM1/: SVM_Data1.xml
iarc007/doc/SVMXML/SVM11/: ReadMe.txt  SVM_Data11.xml
iarc007/doc/SVMXML/SVM2/: ReadMe.txt  SVM_Data2.xml
iarc007/doc/SVMXML/SVM3/: ReadMe.txt  SVM_Data3.xml
iarc007/doc/data/: Rotation.xml  acc.txt  pose.txt  postion.txt  velocity.txt
iarc007/doc/git与github/: wiki
iarc007/doc/usbcamera_info/: .README.swp  README  ttyUSB0  ttyUSB1  video0  video1  video3
iarc007/include/iarc007/hy_target/: DecHOG.h  Filter_Statistic.h  L_target.h  Track.h  Track.h~  angleID.h  angleID.hpp~  angleID.h~  aprilTags.h  common.h  findcircle.h  fun.h  fun.h~  greentarget.h~  opFlow.h  parameter.h  parameter.h~  target.h  target.h~
iarc007/include/iarc007/jrh_pilot/: JRH_math.h  JRH_math.h~  control.h  pilotmain.h  pilotmain.h~  subscribe.h  subscribe.h~
iarc007/include/iarc007/localization/: iposInfo.h  localization.h
iarc007/include/iarc007/mjh_pos/: common.h  estimater.h  find_line.h  mjh_math.h  threshold_image.h
iarc007/include/iarc007/zy_obstacle/: obj_utility.h~  obs_utility.h  obs_utility.h~
iarc007/launch/: README.txt  hy.launch  iarc007.launch~  iarc007_01.launch  iarc007_play.launch~  iarc007_record.launch  iarc007_record.launch~  localization.launch  optical_flow.launch  record.launch  record.launch~  roslaunch_backup
iarc007/msg/: jrh_model_choose.msg  msg指导.md  object.msg  obstacle.msg~  vehicle_pos.msg  vehicle_pos.msg~
iarc007/src/HY_target/: 1.txt  DecHOG.cpp  Extrinsic.cpp  Filter_Statistic.cpp  Track.cpp  Track.cpp~  angleID.cpp  angleID.cpp~  angleID.hpp~  aprilTags.cpp  aprilTags.cpp~  calibfisheye.cpp  calibration.cpp  calibration.cpp~  common.cpp  common.cpp~  dianbianhuan1.cpp~  exter_para.cpp~  exter_param.cpp  exter_param.cpp~  findcircle.cpp  fun.cpp  fun.cpp~  green_target.cpp~  hightarget.cpp  hy_opencv_pub(guang).cpp  hy_opencv_pub.cpp  hy_opencv_pub.cpp~  hy_opencv_sub.cpp  hy_opencv_sub.cpp~  hy_opencv_test.cpp~  hy_test.cpp~  lk_track.cpp  lowtarget.cpp  lowtarget.cpp~  opFlow.cpp  optical_flow.cpp  optical_flow_detection.cpp  target.cpp  target.cpp~
iarc007/src/JRH_pilot/: JRH_math.cpp  JRH_math.cpp~  JRH_math.h~  control (复件).cpp  control 简化版.cpp  control.cpp  control.cpp~  pilotmain.cpp  pilotmain.cpp~  wny_client.cpp
iarc007/src/JRH_pilot/data (复件)/: Q_INIT.txt  Q_INIT.txt~  acceleration.txt  (+13 more)
iarc007/src/MJH_pos/: common.cpp  estimater.cpp  find_line.cpp  hough.md  mjh_math.cpp  mjh_pos.cpp  mjh_pos.cpp~  mjh_vision_pos(原来).cpp  mjh_vision_pos.cpp  mjh_vision_pos.cpp~  mjh_vision_pos1.cpp~  mjh_vision_pos2.cpp  mjh_vision_pos23稳定.cpp  mjh_vision_pos4.cpp  mjh_vision_pos原.cpp  mjh_vision_yaw.cpp  slam.cpp  threshold_image(白线细化).cpp  threshold_image.cpp
iarc007/src/ZY_obstacle/: zy_obstacle.cpp  zy_obstacle.cpp~
iarc007/src/localization/: iposInfo.cpp  localization.cpp  robot_local.cpp
rplidar_ros/: .gitignore  CMakeLists.txt  package.xml
rplidar_ros/launch/: rplidar.launch
rplidar_ros/msg/: obstacle.msg
rplidar_ros/sdk/include/: rplidar_cmd.h
rplidar_ros/src/: client withvelo.cpp  client.cpp  client0415.cpp  clientwsq.cpp  delay.py  fre.cpp  leo_pub.cpp  node.cpp  rp_pub.cpp  test_fre.cpp  time.cpp
(+16 files in other folders)
